Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,8 +86,8 @@ stages:
             displayName: 'Azure App Service Deploy: website'
             inputs:
               azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: '$(WebAppNameDev)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+              appName: $(WebAppNameDev)
+              package: $(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip
 
 - stage: 'Test'
   displayName: 'Deploy to the test environment'
